fix: prevent theme flickering during load

--- a/src/web/static/css/base.css
+++ b/src/web/static/css/base.css
@@ -1,4 +1,5 @@
 :root {
+  color-scheme: dark light;
   /* sizes */
   --size-max-width: 800px;
   --size-msg: 500px;
@@ -16,6 +17,16 @@
 
   /* font */
   --font-size-small: 0.8rem;
+
+  /* colors */
+  --clr-bg: light-dark(#f5f5f5, #111);
+  --clr-bg-overlay: light-dark(#fafafa, #252529);
+  --clr-bg-outline: light-dark(#9f9f9f, #7a8396);
+  --clr-danger: light-dark(#eda4b6, #bc7083);
+  --clr-primary: light-dark(#a7c9ff, #4c6a98);
+  --clr-text: light-dark(#111, #e2e2e2);
+  --clr-text-danger: light-dark(#981e3c, #981e3c);
+  --clr-text-primary: light-dark(#194eac, #759fe6);
 }
 
 * {
@@ -29,32 +40,12 @@ html {
 }
 
 body {
-  --clr-bg: #f5f5f5;
-  --clr-bg-overlay: #fafafa;
-  --clr-bg-outline: #9f9f9f;
-  --clr-danger: #eda4b6;
-  --clr-primary: #a7c9ff;
-  --clr-text: #111;
-  --clr-text-danger: #981e3c;
-  --clr-text-primary: #194eac;
-
   display: flex;
   flex-direction: column;
   background-color: var(--clr-bg);
   color: var(--clr-text);
   min-height: 100vh;
   font-family: "Inter", sans-serif;
-}
-
-body.dark-theme {
-  --clr-bg: #111;
-  --clr-bg-overlay: #252529;
-  --clr-bg-outline: #7a8396;
-  --clr-danger: #bc7083;
-  --clr-primary: #4c6a98;
-  --clr-text: #e2e2e2;
-  --clr-text-danger: #981e3c;
-  --clr-text-primary: #759fe6;
 }
 
 h1,
